<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <!-- background -->
    <ImageView
        android:id="@+id/dark_bg_overlay"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:animateLayoutChanges="true">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:animateLayoutChanges="true"
            android:weightSum="1">

            <include layout="@layout/ace_toolbar"/>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:paddingTop="10dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/bonus_ads_info"
                    android:gravity="center"
                    android:textAlignment="center"/>

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/ic_bonus"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <Button
                    android:id="@+id/btn_show_bonus_ads"
                    android:layout_width="wrap_content"
                    android:minWidth="@dimen/signin_button_width"
                    android:maxWidth="@dimen/signin_button_width"
                    android:layout_height="@dimen/signin_button_height"
                    android:background="@drawable/button_border_solid_blue"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:text="@string/show_bonus_ads"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_no_bonus_ads"
                    android:layout_width="wrap_content"
                    android:minWidth="@dimen/signin_button_width"
                    android:maxWidth="@dimen/signin_button_width"
                    android:layout_height="@dimen/signin_button_height"
                    android:background="@drawable/button_border_solid_white"
                    android:textColor="@color/bluegrey800"
                    android:textAllCaps="false"
                    android:maxLines="2"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lbl_bonuses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:textSize="16sp"
                    android:text="@string/current_bonuses_amount"
                    android:visibility="gone"/>
                <Button
                    android:id="@+id/btn_bonuses"
                    android:layout_width="wrap_content"
                    android:minWidth="@dimen/signin_button_width"
                    android:maxWidth="@dimen/signin_button_width"
                    android:layout_height="@dimen/signin_button_height"
                    android:background="@drawable/button_border"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/lbl_select_segment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    android:textSize="16sp"
                    android:text="@string/set_ads_price"/>
                <Button
                    android:id="@+id/btn_select_segment"
                    android:layout_width="@dimen/circle_button_width"
                    android:layout_height="@dimen/circle_button_height"
                    android:background="@drawable/circle_button"
                    android:textColor="@color/bluegrey800"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>